MON-127: get Amon test suite running with the new world order (part 1)
This gets the test *prep* working: the part that creates test users,
zones, keys and cleans previous test data. Also:

- update ldap 0.5.0 (we were close, but installing from a git sha
  wasn't so nice for 'npm ls' for example)
- update to latest node-sdc-clients for the zapi and cnapi clients

--- a/TODO.txt
+++ b/TODO.txt
@@ -101,6 +101,7 @@
 - saving the alarm events in redis? Are those needed for anything? Not
   bothering until we have UI that would use this.
 - endpoint to test sending to a contact "POST /pub/:uuid/testnotify"
+- restify v2.x
 - "sdc-amon /pub/trent.mick" messes up on '.' in username -> restify upgrade
   Check for this being fixed with restify 1.x
 - amon-relay and amon-agent: move node to build/node (a la portal and others)
